--- a/src/app/index.css
+++ b/src/app/index.css
@@ -7,3 +7,31 @@
 :root{
     font-family: monserrat;
 }
+
+.gradient-background 
+{
+  background-image: linear-gradient(
+    to bottom, 
+    #06100F 0%, 
+    #3D514F 16.67%,
+    #566C6A 33.33%, 
+    #7B908E 50%,
+    #BDC8C7 66.67%,
+    #DDE3E3 83.33%,
+    #F1F4F4 100%
+  );
+}
+
+.inverse-gradient-background 
+{
+    background-image: linear-gradient(
+      to bottom,
+      #868989 0%,
+      #808685 16.67%,
+      #687574 33.33%,
+      #475A59 50%,
+      #2B403F 66.67%,
+      #192A28 83.33%,
+      #081312 100%
+    );
+}
